# image_processor

./: CMakeLists.txt  ModuleLoader.cpp  ModuleLoader.h  config.h  image_processor.cpp
CLI/: cli.cpp  cli.h
Image/: Image.cpp  Image.h
Image/bmp/: bmp.cpp  bmp.h
Pipeline/: Pipeline.cpp  Pipeline.h
filters/: Filter.h  MatrixFilter.cpp  MatrixFilter.h
filters/basic_filters/: Blur.cpp  Blur.h  Crop.cpp  Crop.h  Edge.cpp  Edge.h  Grayscale.cpp  Grayscale.h  Negative.cpp  Negative.h  OilFilter.cpp  OilFilter.h  Sharpening.cpp  Sharpening.h  basic_filters.h
utils/: Matrix.h
